--- a/Tic-Tac-Toe Game.ipynb
+++ b/Tic-Tac-Toe Game.ipynb
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "# def print_board(board):\n",
+     "def print_board(board):\n",
     "    print()\n",
     "    print(f\" {board[0]} | {board[1]} | {board[2]} \")\n",
     "    print(\"---|---|---\")\n",
