--- a/Tic-Tac-Toe Game.ipynb
+++ b/Tic-Tac-Toe Game.ipynb
@@ -38,9 +38,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9d3e161-0d1e-4b46-a370-cc898415e46a",
+   "metadata": {},
+   "source": [
+    "### Define the print board function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3ad1c7a6-11e9-45d1-8117-fdf2ffbea36a",
+   "id": "a3ac7bc1-d403-4bfb-95cd-45ba0e74dd52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_board(board):\n",
+    "    print()\n",
+    "    print(f\" {board[0]} | {board[1]} | {board[2]} \")\n",
+    "    print(\"---|---|---\")\n",
+    "    print(f\" {board[3]} | {board[4]} | {board[5]} \")\n",
+    "    print(\"---|---|---\")\n",
+    "    print(f\" {board[6]} | {board[7]} | {board[8]} \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c04750f8-fcc8-4815-bb51-03796a828423",
+   "metadata": {},
+   "source": [
+    "### Define the check_winner function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c69728e6-003e-44d2-adc2-90c5fe877b15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_winner(board, player):\n",
+    "    win_conditions = [\n",
+    "        [0, 1, 2], [3, 4, 5], [6, 7, 8],  # rows\n",
+    "        [0, 3, 6], [1, 4, 7], [2, 5, 8],  # columns\n",
+    "        [0, 4, 8], [2, 4, 6]              # diagonals\n",
+    "    ]\n",
+    "    for condition in win_conditions:\n",
+    "        if board[condition[0]] == board[condition[1]] == board[condition[2]] == player:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbf4ddc0-eba1-4ce0-b179-ed499c2fd5f0",
+   "metadata": {},
+   "source": [
+    "### Define the tic_tac_toe function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "72628851-9475-4d52-abd9-a70a10d8c262",
    "metadata": {},
    "outputs": [
     {
@@ -60,46 +120,6 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Player X, choose your move (1-9):  5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "   |   |   \n",
-      "---|---|---\n",
-      "   | X |   \n",
-      "---|---|---\n",
-      "   |   |   \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Player O, choose your move (1-9):  2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "   | O |   \n",
-      "---|---|---\n",
-      "   | X |   \n",
-      "---|---|---\n",
-      "   |   |   \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
       "Player X, choose your move (1-9):  1\n"
      ]
     },
@@ -108,51 +128,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " X | O |   \n",
-      "---|---|---\n",
-      "   | X |   \n",
-      "---|---|---\n",
-      "   |   |   \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Player O, choose your move (1-9):  3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " X | O | O \n",
-      "---|---|---\n",
-      "   | X |   \n",
-      "---|---|---\n",
-      "   |   |   \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Player X, choose your move (1-9):  7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " X | O | O \n",
-      "---|---|---\n",
-      "   | X |   \n",
-      "---|---|---\n",
       " X |   |   \n",
+      "---|---|---\n",
+      "   |   |   \n",
+      "---|---|---\n",
+      "   |   |   \n",
       "\n"
      ]
     },
@@ -160,7 +140,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Player O, choose your move (1-9):  9\n"
+      "Player O, choose your move (1-9):  5\n"
      ]
     },
     {
@@ -168,11 +148,51 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " X | O | O \n",
+      " X |   |   \n",
       "---|---|---\n",
-      "   | X |   \n",
+      "   | O |   \n",
       "---|---|---\n",
-      " X |   | O \n",
+      "   |   |   \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player X, choose your move (1-9):  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " X |   | X \n",
+      "---|---|---\n",
+      "   | O |   \n",
+      "---|---|---\n",
+      "   |   |   \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player O, choose your move (1-9):  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " X |   | X \n",
+      "---|---|---\n",
+      " O | O |   \n",
+      "---|---|---\n",
+      "   |   |   \n",
       "\n"
      ]
     },
@@ -189,11 +209,11 @@
      "text": [
       "Invalid move. Try again.\n",
       "\n",
-      " X | O | O \n",
+      " X |   | X \n",
       "---|---|---\n",
-      "   | X |   \n",
+      " O | O |   \n",
       "---|---|---\n",
-      " X |   | O \n",
+      "   |   |   \n",
       "\n"
      ]
     },
@@ -201,7 +221,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Player X, choose your move (1-9):  4\n"
+      "Player X, choose your move (1-9):  6\n"
      ]
     },
     {
@@ -209,37 +229,57 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " X | O | O \n",
+      " X |   | X \n",
       "---|---|---\n",
-      " X | X |   \n",
+      " O | O | X \n",
       "---|---|---\n",
-      " X |   | O \n",
+      "   |   |   \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player O, choose your move (1-9):  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " X |   | X \n",
+      "---|---|---\n",
+      " O | O | X \n",
+      "---|---|---\n",
+      "   | O |   \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Player X, choose your move (1-9):  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " X |   | X \n",
+      "---|---|---\n",
+      " O | O | X \n",
+      "---|---|---\n",
+      "   | O | X \n",
       "\n",
       "Congratulations! Player X wins!\n"
      ]
     }
    ],
    "source": [
-     "def print_board(board):\n",
-    "    print()\n",
-    "    print(f\" {board[0]} | {board[1]} | {board[2]} \")\n",
-    "    print(\"---|---|---\")\n",
-    "    print(f\" {board[3]} | {board[4]} | {board[5]} \")\n",
-    "    print(\"---|---|---\")\n",
-    "    print(f\" {board[6]} | {board[7]} | {board[8]} \")\n",
-    "    print()\n",
-    "\n",
-    "def check_winner(board, player):\n",
-    "    win_conditions = [\n",
-    "        [0, 1, 2], [3, 4, 5], [6, 7, 8],  # rows\n",
-    "        [0, 3, 6], [1, 4, 7], [2, 5, 8],  # columns\n",
-    "        [0, 4, 8], [2, 4, 6]              # diagonals\n",
-    "    ]\n",
-    "    for condition in win_conditions:\n",
-    "        if board[condition[0]] == board[condition[1]] == board[condition[2]] == player:\n",
-    "            return True\n",
-    "    return False\n",
-    "\n",
     "def tic_tac_toe():\n",
     "    board = [' '] * 9\n",
     "    current_player = 'X'\n",
@@ -271,6 +311,16 @@
     "\n",
     "# Start the game\n",
     "tic_tac_toe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f23f9c9-684d-4a1f-beb3-e2f4b8daa31b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### GitHub - https://github.com/priyangajayasinghe/Tic-Tac-Toe-UI/blob/main/Tic-Tac-Toe%20Game.ipynb "
    ]
   }
  ],
