--- a/TicTacToeGameUI.ipynb
+++ b/TicTacToeGameUI.ipynb
@@ -38,9 +38,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7707a32f-874d-41f5-b867-a2222fe86894",
+   "metadata": {},
+   "source": [
+    "### Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e35aedda-ccfd-4e01-b61c-77237adef819",
+   "execution_count": 69,
+   "id": "1d4358b2-3905-477f-b2c2-f03582285fad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,26 +60,26 @@
     "        self.root = root\n",
     "        self.root.title(\"Tic-Tac-Toe\")\n",
     "        \n",
-    "        # Initialize the game state\n",
-    "        self.board = [None] * 9  # Empty board\n",
+    "        self.board = [None] * 9  \n",
     "        self.current_player = 'X'\n",
     "        \n",
-    "        # Create the buttons for the board\n",
     "        self.buttons = []\n",
     "        for i in range(9):\n",
-    "            button = tk.Button(self.root, text='', font=('normal', 20), width=5, height=2,\n",
-    "                               command=lambda index=i: self.make_move(index))\n",
+    "            button = tk.Button(\n",
+    "                self.root, text='', font=('normal', 20), width=15, height=5,\n",
+    "                command=lambda index=i: self.make_move(index)\n",
+    "            )\n",
     "            button.grid(row=i//3, column=i%3)\n",
     "            self.buttons.append(button)\n",
     "        \n",
-    "        # Create the status label\n",
     "        self.status_label = tk.Label(self.root, text=\"Next player: X\", font=('normal', 15))\n",
     "        self.status_label.grid(row=3, column=0, columnspan=3)\n",
-    "        \n",
+    "\n",
     "    def make_move(self, index):\n",
-    "        if self.board[index] is None:  # Ensure the cell is empty\n",
+    "        if self.board[index] is None:  \n",
     "            self.board[index] = self.current_player\n",
     "            self.buttons[index].config(text=self.current_player)\n",
+    "            \n",
     "            if self.check_winner():\n",
     "                messagebox.showinfo(\"Game Over\", f\"{self.current_player} wins!\")\n",
     "                self.reset_game()\n",
@@ -89,8 +97,7 @@
     "            [0, 4, 8], [2, 4, 6]              # Diagonals\n",
     "        ]\n",
     "        \n",
-    "        for condition in win_conditions:\n",
-    "            a, b, c = condition\n",
+    "        for a, b, c in win_conditions:\n",
     "            if self.board[a] == self.board[b] == self.board[c] and self.board[a] is not None:\n",
     "                return True\n",
     "        return False\n",
@@ -103,19 +110,19 @@
     "        self.current_player = 'X'\n",
     "        self.status_label.config(text=\"Next player: X\")\n",
     "\n",
-    "# Create the Tkinter window and game instance\n",
+    "\n",
     "root = tk.Tk()\n",
     "game = TicTacToe(root)\n",
     "root.mainloop()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa0505c0-8159-44c7-b1e7-348d242327d7",
+   "cell_type": "markdown",
+   "id": "af0fc1e2-c1f8-473c-91a7-e90a4cf4e8ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### GitHub - https://github.com/priyangajayasinghe/Tic-Tac-Toe-UI/blob/main/TicTacToeGameUI.ipynb"
+   ]
   }
  ],
  "metadata": {
